--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <!-- About Tab -->
             <div class="settings-tab-content" id="tab-about">
                 <div class="settings-section">
-                    <h3><i class="fas fa-info-circle"></i> About H360 Sound Collection</h3>
+                    <h3><i class="fas fa-info-circle"></i> About Pixel Sound Collection</h3>
                     <p>A comprehensive audio search engine for browsing, previewing, and downloading sound effects.</p>
                     
                     <div class="about-stats">
