--- a/index.html
+++ b/index.html
@@ -382,12 +382,14 @@
                     <div class="sheets-info">
                         <h4>Sheet Structure:</h4>
                         <ul>
-                            <li><strong>Column A:</strong> File Path</li>
+                            <li><strong>Column A:</strong> File Path (Google Drive URL or local path)</li>
                             <li><strong>Column B:</strong> Display Name</li>
                             <li><strong>Column C:</strong> Tags (comma-separated)</li>
                             <li><strong>Column D:</strong> Description</li>
                             <li><strong>Column E:</strong> Rating (1-5)</li>
+                            <li><strong>Column F:</strong> Folder Collection (library name)</li>
                         </ul>
+                        <p class="sheets-note"><em>Note: The first row should contain column headers. The sheet must be published to web (File → Share → Publish to web).</em></p>
                     </div>
                     
                     <div class="export-options">
